# fdpclient

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/fdpclient/: __about__.py  basicclient.py  fdpclient.py  utils.py
tests/: test_basicclient.py  test_fdpclient.py  test_sparql.py  test_utils.py
