[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdpclient"
dynamic = ["version"]
description = 'A FAIR Data Point client written in Python'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["FDP", "Client", "SPARQL", "FAIR Data Point"]
authors = [{ name = "Mark Janse", email = "mark.janse@health-ri.nl" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["sparqlwrapper~=2.0", "rdflib~=7.0.0"]

[project.urls]
Documentation = "https://github.com/health-ri/fdpclient#readme"
Issues = "https://github.com/health-ri/fdpclient/issues"
Source = "https://github.com/health-ri/fdpclient"

[tool.hatch.version]
path = "src/fdpclient/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "pytest"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fdpclient tests}"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pytest-mock",
  "requests-mock",
  "pytest-cov",
  "freezegun",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "pypy3.9", "pypy3.10"]

[tool.coverage.run]
source_pkgs = ["fdpclient", "tests"]
branch = true
parallel = true
omit = ["src/fdpclient/__about__.py"]

[tool.coverage.paths]
fdpclient = ["src/fdpclient", "*/fdpclient/src/fdpclient"]
tests = ["tests", "*/fdpclient/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
